@@ -1,3 +1,6 @@
+/* This file is part of KeY - https://key-project.org
+ * KeY is licensed under the GNU General Public License Version 2
+ * SPDX-License-Identifier: GPL-2.0-only */
 package de.uka.ilkd.key.gui.keyshortcuts;
 
 import java.awt.event.KeyAdapter;
@@ -126,7 +129,7 @@ public class ShortcutSettings extends SimpleSettingsPanel implements SettingsPro
          */
 
         List<KeyStroke> keystrokes =
-            s.stream().map(KeyStroke::getKeyStroke).collect(Collectors.toList());
+            s.stream().map(KeyStroke::getKeyStroke).toList();
         /*
          * if (keystrokes.contains(null)) { throw new InvalidSettingsInputException(
          * "Invalid keystroke specified", this, tblShortcuts); }
